--- a/task1.html
+++ b/task1.html
@@ -2156,7 +2156,7 @@
 		    	height: 858.8px;
 		    }
 		</style>
-		<script src="../js/tan.js"></script>
+		<script src="js/tan.js"></script>
 		<script>
 			
 			
